# Animation_and_Collision_Physics

./: .gitignore  5893M2024A2Animation  AnimationCycleWidget.cpp  AnimationCycleWidget.h  BVHData.cpp  BVHData.h  CMakeLists.txt  Cartesian3.cpp  Cartesian3.h  Homogeneous4.cpp  Homogeneous4.h  IndexedFaceSurface.cpp  IndexedFaceSurface.h  Makefile  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  SceneModel.cpp  SceneModel.h  Terrain.cpp  Terrain.h  joints  main.cpp  moc_AnimationCycleWidget.cpp  moc_predefs.h  readme.txt
models/: dodecahedron.face  fast_run.bvh  flatland.dem  rollingland.dem  spheroid.face  stand.bvh  stripeland.dem
